<resources>
    <string name="app_name">Phone Photo Prints App</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Phone Photo Prints</string>
    <string name="hint">Number of Prints</string>
    <string name="btnOrder">Order Prints</string>
    <string name="radFourBySix">4 x 6 (19 cents)</string>
    <string name="radFiveBySeven">5 x 7 (49 cents)</string>
    <string name="radEightByTen">8 x 10 (79 cents)</string>
</resources>
